fixed the bleeding footer

--- a/css/screen.css
+++ b/css/screen.css
@@ -299,6 +299,10 @@ h2{
 
 }
 
+.has-toolbar #foot{
+  visibility: hidden;
+}
+
 
 /* navigation transition */
 
